--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,7 @@
 *{
     transition: .2s;
     box-sizing: border-box;
+    font-family: sans-serif;
 
 }
 
@@ -20,17 +21,17 @@ body{
 }
 
 ul{
-    
+
+    list-style-type: none;
     display: flex;
     justify-content: space-between;
-    margin-top: 1.6%;
+    margin-top: 1.2%;
     width: 100%;
 
 }
 
 .nav_menu_li{
 
-    transform: translate(0, -10px);
     font-size: 2.2vh;
 
 }
